PasswordBox: avoid skip button covering submit button

--- a/src/components/PasswordBox.css
+++ b/src/components/PasswordBox.css
@@ -66,6 +66,7 @@
 
 .password-box.input-eligible .skip {
     opacity: 0;
+    pointer-events: none;
 }
 
 /* SETTER */
